# BinaryArithmeticCodec

./: CMakeLists.txt
codec/: main.cpp
codec/ArithmeticCodec/Encoder/: Encoder.h
codec/Data/: Data.h
codec/Distribution/: Distribution.h
codec/Distribution/LaplaceDistribution/: LaplaceDistribution.cpp
codec/Distribution/NormalDistribution/: NormalDistribution.cpp  NormalDistribution.h
codec/Distribution/UniformDistribution/: UniformDistribution.h
codec/Tests/: Tests.h
codec/Utilities/: ErrorCodes.h
codec/Utilities/Image/: Image.cpp  Image.h
src/ArithmeticCodec/Decoder/: Decoder.cpp  Decoder.h
src/ArithmeticCodec/Encoder/: Encoder.cpp
src/Data/: Data.cpp  Data.h
src/Distribution/: Distribution.cpp
src/Distribution/LaplaceDistribution/: LaplaceDistribution.h
src/Distribution/UniformDistribution/: UniformDistribution.cpp
src/Tests/: Tests.cpp
src/Utilities/Image/: Image.cpp  Image.h
test/: koda_test.py  laplace_distribution.txt  normal_distribution.txt  uniform_distribution.txt
